# backend-tanks

./: GAME.md  main.py  pyproject.toml
.github/workflows/: test_on_push.yaml
backend/: main.py  pyproject.toml
backend/tests/: test_main.py
tanks/entity/: base.py  tank.py  tank_bot.py  tank_shell.py
tanks/game/: base.py  game.py
tanks/server/: __init__.py  routers.py  socket_manager.py
tanks/world/: base.py  world.py
tests/: conftest.py  test_server.py
